[gd_scene load_steps=11 format=3 uid="uid://75g4tg7m5oib"]

[ext_resource type="FontFile" uid="uid://ds22a1xbmuftb" path="res://addons/gamejolt/example/font.ttf" id="1"]
[ext_resource type="Texture2D" uid="uid://deo8e6fcsrtyu" path="res://addons/gamejolt/example/logo.png" id="2"]
[ext_resource type="Script" path="res://addons/gamejolt/example/example.gd" id="3"]

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.305882, 0.435294, 0.278431, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.611765, 1, 0.454902, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.176471, 0.254902, 0.164706, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.611765, 1, 0.454902, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.490196, 0.694118, 0.45098, 1)
border_color = Color(0.611765, 1, 0.454902, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="3"]
default_font = SubResource("7")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_color_disabled = Color(1, 1, 1, 1)
Button/colors/font_color_focus = Color(1, 1, 1, 1)
Button/colors/font_color_hover = Color(1, 1, 1, 1)
Button/colors/font_color_pressed = Color(1, 1, 1, 1)
Button/constants/hseparation = 0
Button/fonts/font = SubResource("7")
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource("6")
Button/styles/normal = SubResource("2")
Button/styles/pressed = SubResource("1")

[sub_resource type="Gradient" id="4"]
colors = PackedColorArray(0.0915766, 0.195312, 0.0205994, 1, 0.455641, 0.59375, 0.422119, 1)

[sub_resource type="GradientTexture2D" id="8"]
gradient = SubResource("4")
fill_to = Vector2(0, 1)

[node name="Example" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("3")
script = ExtResource("3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("8")
expand_mode = 1

[node name="ButtonOutput" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.75
anchor_top = 0.02
anchor_right = 0.99
anchor_bottom = 0.02
text = "Show Output"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
mouse_filter = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="ContainerInputs" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEditOutput" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Response output"

[connection signal="pressed" from="ButtonOutput" to="." method="_on_ButtonOutput_pressed"]
